static/css/s2.css
/* ... */
.readerNavMenu .libraryMessage {
  font-size: 18px;
  margin-bottom: 40px;
}
.readerPanel.hebrew .navToggles {
    direction: rtl;
}
.readerNavMenu .navToggles {
    text-align: center;
    margin-bottom: 40px;
    margin-top: -10px;
    display: flex;
    justify-content: center;
    flex-direction: row;
}
.readerNavMenu .navToggles .navTogglesDivider {
  color: #ccc;
}
.readerNavMenu .navToggle {
  margin: 0 10px;
  display: inline-block;
  text-align: right;
  text-transform: uppercase;
  color: #999;
  font-size: 11px;
  font-weight: lighter;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  letter-spacing: 1px;
  cursor: pointer;
}
.readerNavMenu .navToggle.second {
  text-align: left;
}
.readerNavMenu .navToggle.active {
  color: black;
}
.readerPanel h2, .readerPanel h3 {
  text-transform: uppercase;
  text-align: center;
  font-size: 15px;
  font-weight: 300;
  color: #666;
  margin-bottom: 20px;
  /* letter-spacing: 2px; */
  /* height: 16px; */
  /* line-height: 16px; */
}
.readerPanel h2 .en, .readerPanel h3 .en {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerPanel h2 .he, .readerPanel h3 .he {
  font-family: "Heebo", sans-serif;
}
.readerNavSection h2, .topicsPanel h2 {
  font-size: 16px;
  font-weight: normal;
  letter-spacing: 1px;
  margin-bottom: 40px;
}
.readerNavSection {
  margin-bottom: 44px;
}
a.recentItem,
a.resourcesLink,
input.resourcesLink {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  min-height: 60px;
}
.readerPanel .recentPanel .recentItem {
  display: flex;
  justify-content: space-between;
  padding: 0;
  border: 0;
  flex-direction: row;
}
.readerPanel .recentPanel .sideColorLeft {
  flex: 1;
  min-width: 0;
}
.readerPanel .recentPanel .saved .sideColorLeft {
  max-width: 90%;
}
.readerPanel .recentPanel a:not(.saved) .sideColorRight {
  margin-inline-end: 10px;
  align-items: center;
  justify-content: flex-end;
  color: #999;
  font-size: 16px;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  width: 90px;
  text-align: end;
}
.interface-hebrew .recentItem:hover .sideColorRight .int-he,
.interface-english .recentItem:hover .sideColorRight .int-en {
  display: inline-block;
  text-decoration: none;
}
.readerPanel .recentPanel .sideColorLeft,
.readerPanel .recentPanel .sideColorRight {
  display: flex;
}
.readerPanel .recentPanel .recentItem .sideColorRight .saveButton {
  display: none;
}
.readerPanel .recentPanel .recentItem:hover .sideColorRight .saveButton {
  display: flex;
  align-items: center;
  padding: 0 15px;
}
.readerPanel .recentPanel .sideColor {
  width: 6px;
  min-width: 6px;
}
.readerPanel .recentPanel .sideColorInner {
  display: flex;
  align-items: center;
  padding: 0 15px;
  overflow: hidden;
}
.readerPanel .recentPanel .sideColorInner .en,
.readerPanel .recentPanel .sideColorInner .he {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.readerPanel .recentPanel .sideColorInner .byLine {
  padding: 0 10px;
}
.readerNavCategories {
  width: 100%;
}
.readerNavCategories a {
  color: #000;
}
.readerNavCategory {
  background-color: white;
  text-transform: uppercase;
  font-family: "adobe-garamond-pro", "Crimson Text", Georgia, serif;
  text-align: center;
  font-size: 18px;
  padding: 16px 10px 17px;
  margin: 0;
  cursor: pointer;
  border-top: 4px solid transparent;
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
  letter-spacing: 1px;
  display: flex;
  align-items: center;
  justify-content: center;;
  line-height: 1.3;
  flex: 1;
}
a.readerNavCategory {
  color: #000;
}
@media (max-width: 450px) {
  .readerNavCategory {
    font-size: 16px;
  }
}
.gridBox .readerNavMore span {
  color: #666;
  text-transform: none;
}
.gridBox .readerNavMore img {
  height: 10px;
  width: 10px;
  opacity: 0.6;
}
.gridBox .readerNavMore .int-en {
  direction: ltr;
}
.bilingual .readerNavCategory .he {
  display: none;
}
.bilingual .readerNavMenu .he {
  display: none;
}
.readerNavCalendar {
  margin-bottom: 30px;
  margin-top: -8px;
}
.userDataButtons {
  margin-bottom: 44px;
}
.blockLink,
.readerNavMenu .resourcesLink {
  display: inline-block;
  background-color: white;
  text-align: center;
  color: #000;
  font-size: 16px;
  border-top: 4px solid transparent;
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
  width: 100%;
  cursor: pointer;
  min-height: 56px;
  vertical-align: middle;
  margin: 0;
  box-sizing: border-box;
  padding: 14px 8px;
}
.blockLink:hover {
  color: #333;
}
.blockLink + .blockLink {
  margin: 5px 0;
}
.blockLink img {
  margin: 0 8px;
  height: 16px;
  width: 16px;
  opacity: 0.4;
  vertical-align: -1px;
}
.resourcesLink {
  border-radius: 7px;
}
.resourcesLink.faded {
  color: #999;
}
.readerNavMenu .blockLink.calendarLink .blockLinkSubtitle{
  display: block;
  font-size: 13px;
  color: #999;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.english .gridBox .gridBoxItem:first-child {
  border-left: 0;
}
.english .gridBox .gridBoxItem:last-child {
  border-right: 0;
}
.hebrew .gridBox .gridBoxItem:first-child {
  border-right: 0;
}
.hebrew .gridBox .gridBoxItem:last-child {
  border-left: 0;
}
.hebrew .readerTocResources .gridBox td:last-child {
  border-left: 0;
  border-right: 3px solid rgba(0,0,0,0);
}
.hebrew .readerTocResources .gridBox td:first-child {
  border-left: 3px solid rgba(0,0,0,0);
  border-right: 0;
}
.readerNavMenu .resourcesLink .en {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerNavMenu .resourcesLink .he {
  font-family: "Heebo", sans-serif;
}
.readerNavMenu .resourcesLink .fa {
  margin: 0 6px;
  color: #999;
}
.readerNavMenu .resourcesLink img {
  width: 16px;
  height: 16px;
  opacity: 0.4;
  margin: 0 5px;
  position: relative;
  top: 2px;
}
.readerNavMenu .siteLinks {
  margin: 20px 0 50px;
  text-align: center;
}
/* ... */

